Fixed besys logo on each page to be vertically aligned; fixed signup page and thank you page

--- a/styles/base.css
+++ b/styles/base.css
@@ -68,7 +68,14 @@ body {
 
 /* ================== NAVIGATION ====================== */
 
+#logolink {
 
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
+    outline: none;
+
+}
 
 .navigation {
     display: flex;
@@ -186,13 +193,14 @@ h3 {
 header {
     /* background-color: var(--carmine); */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #931621ff;
 
     text-align: center;
     color: whitesmoke;
     /* font-family: var(--primary-font); */
     font-family: Roboto, Arial, san-serif;
+
 
 }
 
@@ -210,6 +218,11 @@ header {
 }
 
 /* ================== MAIN ====================== */
+
+#hero-text {
+    text-align: center;
+}
+
 
 h2 {
     margin: 0 auto;
@@ -287,7 +300,7 @@ main {
     background-color: white;
     padding: 10px;
     max-width: 78%;
-    margin-bottom: 10px;
+    height: auto;
 
 
 }
@@ -306,6 +319,8 @@ span#color2 {
 
 }
 
+
+
 .hero,
 .bottom-section {
     /* font-family: var(--secondary-font); */
@@ -316,6 +331,7 @@ span#color2 {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    padding-bottom: 2rem;
 
 }
 
@@ -454,17 +470,111 @@ span#color2 {
     border-bottom: 2px solid yellow;
 }
 
-#signup-form {
+#fname,
+#email {
+    height: 2rem;
+    width: 100%;
+}
+
+#message {
+    width: 250px;
+}
+
+/* ================= JOIN FORM ================= */
+
+
+
+form.join-form {
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr); */
+    color: var(--accent1-color);
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    padding: 5px 0;
-    background-color: #bed;
-    height: 300px;
-    margin: 5px auto;
+    /* border: 1px solid rgba(0, 0, 0, 0.6); */
+
+    align-content: center;
+    align-items: center;
+    margin: 2.2rem auto;
+    max-width: 100vw;
+    width: 100%;
+
+}
+
+
+
+
+label {
+    display: block;
+    margin: 10px;
+
+}
+
+input {
+
+    padding: 10px;
+    max-width: 60vw;
+    width: 100%;
+    height: 44px;
+}
+
+select {
+    display: flex;
+    margin: 7px;
+    padding: 10px;
+    width: 30vw;
+    height: 40px;
+}
+
+fieldset {
     border-radius: 5px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    background-color: aliceblue;
+
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 100vw;
+    width: 100%;
+}
+
+fieldset label {
+    text-align: start;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+textarea {
+    width: 100%;
+
+    height: 100px;
+}
+
+
+
+.radio-label {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 15px auto;
+    font-size: 16px;
+
+}
+
+.radio-label:checked {
+    background-color: #76cf9f;
+    border-color: #666;
+}
+
+.radio-label:focus {
+    outline: 2px dashed #666;
+}
+
+input[type="radio"] {
+
+
+    height: 20px;
+    margin: 0;
+    padding: 0;
+
 }
 
 
@@ -640,7 +750,7 @@ footer {
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 987px) {
 
     p.project-desc {
         font-size: 0.8rem;
@@ -653,7 +763,7 @@ footer {
     }
 
     #menu {
-        font-size: 1.5rem;
+        font-size: 2rem;
         border: 0;
         position: absolute;
         top: 10px;
@@ -677,6 +787,11 @@ footer {
 
     }
 
+    .navigation {
+        display: flex;
+        flex-direction: column;
+    }
+
     .navigation ul {
         display: none;
     }
@@ -692,6 +807,7 @@ footer {
 
     .navigation .logo {
         display: flex;
+
     }
 
 
@@ -712,6 +828,7 @@ footer {
         align-content: center;
         justify-content: center;
         max-width: 100%;
+
     }
 
     .brand {
